@@ -33,6 +33,8 @@
 #include <glib.h>
 
 typedef struct _WebKitPrintOperation WebKitPrintOperation;
+typedef struct _WebKitFindController WebKitFindController;
+typedef struct _WebKitWebView        WebKitWebView;
 
 #ifdef G_OS_WIN32
 #    ifdef BUILDING_WEBKIT
@@ -45,8 +47,5 @@ typedef struct _WebKitPrintOperation WebKitPrintOperation;
 #    define WEBKIT_API __attribute__((visibility("default")))
 #    define WEBKIT_OBSOLETE_API WEBKIT_API __attribute__((deprecated))
 #endif
-
-typedef struct _WebKitFindController WebKitFindController;
-typedef struct _WebKitWebView        WebKitWebView;
 
 #endif // WebKitDefines_h
